<resources>
    <string name="app_name">Arithmetic</string>
    <string name="new_game">New Game</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="result_correct">Correct!</string>
    <string name="result_wrong">Wrong!</string>
    <string name="time_left">Time Left</string>
    <string name="score">Score</string>
    <string name="play_again">Play Again</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="level_label">Choose your difficulty level</string>
    <string name="time_result_label">Time is up! Your score is</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong :(</string>
    <string name="back_to_home">Back to Home</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="save_your_score">Save Your Score</string>
    <string name="your_name">Your Name</string>
    <string name="sum_text" translatable="false">%d + %d</string>
    <string name="name">Name: %s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
