<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <RelativeLayout
        android:id="@+id/gameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="@dimen/card_border_radius"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/body2"
                        android:textColor="@color/font"
                        android:text="@string/time_left"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/timerTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/font"
                        android:text="30"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:textSize="@dimen/body1" />

                </LinearLayout>

                <TextView
                    android:id="@+id/sumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="30 + 1"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="@dimen/heading1"
                    android:textColor="@color/font"
                    android:layout_centerInParent="true"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/body2"
                        android:textColor="@color/font"
                        android:text="@string/score"/>

                    <TextView
                        android:id="@+id/scoreTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/font"
                        android:text="0"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:textSize="@dimen/body1" />

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/body"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:background="@null"
            android:layout_below="@+id/card"/>

        <GridLayout
            android:id="@+id/answerGridLayout"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="16dp"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:layout_below="@+id/resultTextView">

            <Button
                android:id="@+id/button0"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="0"
                android:text="1"
                android:textSize="@dimen/answer"
                android:background="@drawable/answer_box"
                android:stateListAnimator="@null"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/poppins_bold"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="1"
                android:text="2"
                android:textSize="@dimen/answer"
                android:background="@drawable/answer_box"
                android:stateListAnimator="@null"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/poppins_bold"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="2"
                android:text="3"
                android:textSize="@dimen/answer"
                android:background="@drawable/answer_box"
                android:stateListAnimator="@null"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/poppins_bold"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="3"
                android:text="4"
                android:textSize="@dimen/answer"
                android:background="@drawable/answer_box"
                android:stateListAnimator="@null"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/poppins_bold"/>

        </GridLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/resultLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="invisible"
        android:background="@drawable/ic_background">

        <TextView
            android:id="@+id/timeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/time_result_label"
            android:textSize="@dimen/body"
            android:textColor="@color/white"
            android:background="@null"
            android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:id="@+id/scoreResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="@dimen/heading1"
            android:textColor="@color/white"
            android:background="@null"
            android:layout_below="@+id/timeResult"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="play"
            android:layout_below="@+id/scoreResult"
            android:background="@drawable/button_color"
            android:textColor="@color/text_color"
            android:text="@string/play_again"
            android:fontFamily="@font/poppins_semi_bold"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/backToHomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="backToHome"
            android:layout_below="@+id/playAgainButton"
            android:background="@drawable/button_color"
            android:textColor="@color/text_color"
            android:text="@string/back_to_home"
            android:fontFamily="@font/poppins_semi_bold"
            android:layout_centerHorizontal="true"/>
        
    </RelativeLayout>

</RelativeLayout>